--- a/src/Config.vala.in
+++ b/src/Config.vala.in
@@ -1,4 +1,6 @@
 namespace Constants {
     public const string GETTEXT_PACKAGE = @GETTEXT_PACKAGE@;
     public const string LOCALEDIR = @LOCALEDIR@;
+    public const string LASTFM_API_KEY = @LASTFM_API_KEY@;
+    public const string LASTFM_SHARED_SECRET = @LASTFM_SHARED_SECRET@;
 }
