--- a/src/meson.build
+++ b/src/meson.build
@@ -1,12 +1,14 @@
 sources = [
     'Application.vala',
     'AudioObject.vala',
+    'Lastfm.vala',
     'MainWindow.vala',
     'PlaybackManager.vala',
     'DBus/MprisPlayer.vala',
     'DBus/MprisRoot.vala',
     'Views/NowPlayingView.vala',
     'Widgets/AlbumImage.vala',
+    'Widgets/ConnectLastfm.vala',
     'Widgets/SeekBar.vala',
     'Widgets/TrackRow.vala',
 ]
